# RadarPipeline

./: CMakeLists.txt
src/: main.cpp
src/config/: CMakeLists.txt
src/data_types/: CMakeLists.txt  datatypes.cpp
src/doa_processing/: CMakeLists.txt  doa_processing.cpp  doa_processing.hpp
src/ego_estimation/: CMakeLists.txt  ego_estimation.hpp
src/ghost_removal/: CMakeLists.txt  ghost_removal.hpp
src/mimo_synthesis/: CMakeLists.txt  mimo_synthesis.cpp  mimo_synthesis.hpp
src/peak_detection/: CMakeLists.txt  peak_detection.cpp  peak_detection.hpp
src/preprocessing/: .fft_processing.cpp.swo  CMakeLists.txt  fft_processing.cpp
src/rcs/: CMakeLists.txt  rcs.cpp  rcs.hpp
src/target_processing/: CMakeLists.txt  target_processing.cpp  target_processing.hpp
